IGNITE-20443 Removed decorator.